--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 Flask
 requests
-streamlit
-python-dateutil
-google-api-python-client
-google-auth-httplib2
+google-auth
 google-auth-oauthlib
+google-auth-httplib2
+google-api-python-client
+gunicorn
